--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>HCMMC</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&family=Rampart+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="banner">
-      Harrison Chen Memorial Math Competition
+      Harrison Chen Memorial<br>Math Competition
     </div>
     <div class="body">
     <div class="left">
-      Welcome to the unofficial website of the Harrison Chen Memorial Math
-      Competition!
+      Welcome to the unofficial website of the <b>Harrison Chen Memorial Math
+      Competition</b>!
       <br><br>
       HCMMC is the best free math competition for 3rd graders to 8th graders
-      (and parents!) in the Bay Area! The competition is run by Cupertino Math
+      (and parents!) in the Bay Area! This competition is held in honor of
+      Harrison Chen, a former student at Palo Alto High School who unfortunately
+      passed away in 2015. The competition is run by Cupertino Math
       Olympiads, but anyone can join! The competion consists of 12 problems to
       be solved in 60 minutes. Our math problems are very tough, but are
       also very fun! The competition is offered in 5 divisions:
@@ -46,7 +52,7 @@
     </div>
     </div>
     <div class="footer">
-      Website designed by Ved Pradhan.
+      Website designed by Ved Pradhan, in 2021.
     </div>
   </body>
 </html>
