--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
           experience.</li>
       </ul>
       <br>
-      Note: This is an <i>unofficial</i> website. An official website is still being
-      built.
+      Note: This is an <i>unofficial</i> website. An official website is still
+      being built.
     </div>
     <div class="right">
-      <button type="button" name="button">Placeholder</button>
+      <button type="button" onclick="window.location.href='2021.html'">HCMMC 2021</button>
+      <button type="button" onclick="window.location.href='2022.html'">HCMMC 2022</button>
     </div>
     </div>
     <div class="footer">
-      Website designed by Ved Pradhan, in 2021.
+      Website designed by Ved Pradhan in 2021.
     </div>
   </body>
 </html>
