--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="right">
       <button type="button" onclick="window.location.href='2021.html'">HCMMC 2021</button>
       <button type="button" onclick="window.location.href='2022.html'">HCMMC 2022</button>
+      <button type="button" onclick="window.location.href='rules.html'">Rules</button>
       <button type="button" onclick="window.location.href='about-harrison.html'">About Harrison</button>
     </div>
     </div>
