--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <button type="button" onclick="window.location.href='2022.html'">HCMMC 2022</button>
       <button type="button" onclick="window.location.href='rules.html'">Rules</button>
       <button type="button" onclick="window.location.href='about-harrison.html'">About Harrison</button>
+      <button type="button" onclick="window.location.href='about-us.html'">About Us</button>
     </div>
     </div>
     <div class="footer">
