Switched from json to js script.

--- a/about-us.html
+++ b/about-us.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&family=Rampart+One&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body onload="showPeople()">
     <div class="banner">
       About Us
     </div>
@@ -17,7 +17,7 @@
       HCMMC is run by the teacher and teaching assistants of Cupertino Math
       Olympiads. Following is an incomplete list of current and past people who
       have helped run the competition, as well as their roles.
-
+      <br><br>
       <div id="people">
 
       </div>
@@ -29,5 +29,6 @@
     <div class="footer">
       Website designed by Ved Pradhan in 2021.
     </div>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
