--- a/about-us.html
+++ b/about-us.html
@@ -15,8 +15,8 @@
     <div class="body">
     <div class="left">
       HCMMC is run by the teacher and teaching assistants of Cupertino Math
-      Olympiads. Following is an incomplete list of current and past people who
-      have helped run the competition, as well as their roles.
+      Olympiads. Following is an <u>incomplete</u> list of current and past
+      people who have helped run the competition, as well as their roles.
       <br><br>
       <div id="people">
 
