Fixed typo: "Softare" to "Software".

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           This is the hardest division of them all! If you sign up for this
           division, don't expect to get even a handful of the problems correct!
           </li>
-        <li><b>Softare Engineer Division</b> <i>(parents)</i>:
+        <li><b>Software Engineer Division</b> <i>(parents)</i>:
           This division is for parents who want to partake in the comeption
           experience.</li>
       </ul>
