--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       (and parents!) in the Bay Area! This competition is held in honor of
       Harrison Chen, a former student at Palo Alto High School who unfortunately
       passed away in 2015. The competition is run by Cupertino Math
-      Olympiads, but anyone can join! The competion consists of 12 problems to
+      Olympiads, but anyone can join! The competition consists of 12 problems to
       be solved in 60 minutes. Our math problems are very tough, but are
       also very fun! The competition is offered in 5 divisions:
       <br>
@@ -40,7 +40,7 @@
           division, don't expect to get even a handful of the problems correct!
           </li>
         <li><b>Software Engineer Division</b> <i>(parents)</i>:
-          This division is for parents who want to partake in the comeption
+          This division is for parents who want to partake in the competition
           experience.</li>
       </ul>
       <br>
